<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CustomPreguntas">

    <EditText
        android:id="@+id/custom_pregunta"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:gravity="top"
        android:layout_marginVertical="15dp"
        android:hint="@string/introduce"/>

    <EditText
        android:id="@+id/custom_respuesta1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/custom_pregunta"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="15dp"
        android:hint="@string/custom_answer1"/>

    <EditText
        android:id="@+id/custom_respuesta2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/custom_respuesta1"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="15dp"
        android:hint="@string/custom_answer2"/>

    <EditText
        android:id="@+id/custom_respuesta3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/custom_respuesta2"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="15dp"
        android:hint="@string/custom_answer3"/>

    <RadioGroup
        android:id="@+id/custom_dificultad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/custom_respuesta3"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="15dp"
        android:orientation="horizontal"
        android:padding="4dp">

        <RadioButton
            android:id="@+id/custom_facil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/facil" />

        <RadioButton
            android:id="@+id/custom_medio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normal" />

        <RadioButton
            android:id="@+id/custom_dificil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/dificil" />
    </RadioGroup>

    <TextView
        android:id="@+id/custom_correcta_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_respuesta"
        android:textColor="@color/black"
        android:textSize="17dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/custom_dificultad"/>

    <Spinner
        android:id="@+id/spinner"
        style="@style/Widget.AppCompat.Spinner.DropDown"
        android:layout_width="80dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_below="@+id/custom_correcta_text"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="15dp" />

    <Button
        android:id="@+id/guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner"
        android:layout_centerHorizontal="true"
        android:text="Guardar" />

</RelativeLayout>