<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PantallaPreguntas"
    >

    <TextView
        android:id="@+id/turno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Turno: Jugador 1"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.138" />

    <Button
        android:id="@+id/saltar"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/saltar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/respuestas"
        app:layout_constraintVertical_bias="0.377" />

    <Button
        android:id="@+id/aceptar"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:text="@string/aceptar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/respuestas"
        app:layout_constraintVertical_bias="0.377" />

    <TextView
        android:id="@+id/pregunta"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:text="@string/prueba"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.266" />

    <RadioGroup
        android:id="@+id/respuestas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/pregunta"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="@+id/pregunta"
        app:layout_constraintTop_toBottomOf="@+id/pregunta"
        app:layout_constraintVertical_bias="0.127">

        <RadioButton
            android:id="@+id/respuesta1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respuesta_prueba"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <RadioButton
            android:id="@+id/respuesta2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respuesta_prueba2"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <RadioButton
            android:id="@+id/respuesta3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respuesta_prueba"
            android:textColor="@color/black"
            android:textSize="16dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/ronda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ronda"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toEndOf="@+id/turno"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.142" />


</androidx.constraintlayout.widget.ConstraintLayout>